<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/hoofdTitelString"
        android:id="@+id/hoofdTitel" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/body"
                android:src="@drawable/body" />

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/arms"
                android:src="@drawable/arms"
                android:visibility="invisible"
                android:onClick="toggleBodyPart(@+id/arms)" />

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ears"
                android:src="@drawable/ears"
                android:visibility="invisible"/>

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eyebrows"
                android:src="@drawable/eyebrows"
                android:visibility="invisible"/>

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/glasses"
                android:src="@drawable/glasses"
                android:visibility="invisible"/>

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hat"
                android:src="@drawable/hat"
                android:visibility="invisible"/>

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eyes"
                android:src="@drawable/eyes"
                android:visibility="invisible"/>

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mouth"
                android:src="@drawable/mouth"
                android:visibility="invisible"/>

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mustache"
                android:src="@drawable/mustache"
                android:visibility="invisible"/>

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nose"
                android:src="@drawable/nose"
                android:visibility="invisible"/>

            <ImageView
                android:layout_alignTop="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shoes"
                android:src="@drawable/shoes"
                android:visibility="invisible"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/clicknow_string"
        android:id="@+id/clickNow_TV" />

    <GridLayout
        android:gravity="center_horizontal"
        android:rowCount="5"
        android:columnCount="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridView"
    >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arms_Text"
            android:id="@+id/arms_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_Text"
            android:id="@+id/body_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ears_Text"
            android:id="@+id/ears_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyebrows_Text"
            android:id="@+id/eyebrows_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eyes_text"
            android:id="@+id/eyes_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glasses_Text"
            android:id="@+id/glasses_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hat_Text"
            android:id="@+id/hat_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mouth_Text"
            android:id="@+id/mouth_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mustache_Text"
            android:id="@+id/mustache_Checkbox" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nose_Text"
            android:id="@+id/nose_Checkbox" />

    </GridLayout>

</LinearLayout>
